# LearnModernCpp

./: .gitignore  CMakeLists.txt  main.cc
cpp11/: AutoAndDecltype.cc  AutoAndDecltype.h
